<resources>
    <string name="app_name">Pkaart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="fixing">Fixing</string>
    <string name="cart_fragment">Cart Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="dashboard_fragment">DashBoard Fragment</string>
    <string name="see_all">See All</string>
    <string name="shop_by_products">Shoap by Products</string>
    <string name="shop_by_category">Shoap by catetegory</string>
    <string name="category">category</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="tittle">Tittle</string>
    <string name="prise">Prise</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="total_cost_">Total Cost:2000</string>
    <string name="checkout">Checkout</string>
    <string name="total_item_in_cart_is_10">Total Item In Cart Is 10</string>
    <string name="phone_number">Phone Number</string>
    <string name="signin">SIGNIN</string>
    <string name="signup">signup</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="verify_otp">Verify otp</string>
    <string name="otp">OTP</string>
    <string name="sign_in">sign in</string>
    <string name="Username">User Name</string>
    <string name="proceed_to_checkout">Proceed to checkout</string>
    <string name="pin_code">Pin code</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="village">Village</string>
    <string name="user_number">User Number</string>
    <string name="delevered">Delevered</string>
    <string name="product_name">Product Name</string>
    <string name="price_1200rs">Price : 1200rs</string>
</resources>