<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical"
    android:padding="12dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textColor="#4A4949"
            android:textSize="22sp"

            android:textStyle="bold" />

        <TextView
            android:id="@+id/productPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_1200rs"
            android:textColor="#4A4949"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/productStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delevered"
            android:textColor="#4A4949"
            android:textSize="22sp"
            android:textStyle="bold" />


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>