<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.CardFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linear_layout"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/layout_cart_fragment" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="7dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/cartRecyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <TextView
                android:id="@+id/textTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_item_in_cart_is_10"
                android:textColor="#231A29"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_cost_"
                android:textColor="#231A29"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/checkOut"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#D84315"
                android:text="@string/checkout"
                android:textAllCaps="false" />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>